# Ardos

./: .clang-tidy  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile-legacy  LICENSE  README.md  config.example.yaml  config.example.yml  config.yaml  docker-compose.example.yml  docker-compose.test.yml  pyproject.toml  pytest.ini  vcpkg.json
.github/workflows/: ci.yml  codspeed.yml  lint.yml  release.yml
cmake/: Findlibuv.cmake
grafana/: Client-Agent.json  Message-Director.json  State-Server.json
libs/dclass/: CMakeLists.txt
libs/ws28/: CMakeLists.txt  Client.cpp  Server.cpp
libs/ws28/ws28/: Client.h  Headers.h  Server.h  TLS.h
src/: main.cpp
src/clientagent/: client_agent.cpp  client_agent.h  client_participant.cpp  client_participant.h  client_participant_interest.cpp  client_participant_remote.cpp  interest_operation.cpp  interest_operation.h  parenting_rule.cpp  parenting_rule.h
src/database/: database.cpp  database.h  database_server.cpp  database_server.h  database_utils.cpp  database_utils.h
src/messagedirector/: channel_subscriber.cpp  channel_subscriber.h  md_participant.cpp  md_participant.h  message_director.cpp  message_director.h
src/net/: address_utils.cpp  address_utils.h  datagram.cpp  datagram.h  datagram_iterator.cpp  datagram_iterator.h  message_types.h  network_client.cpp  network_client.h  tcp_transport.cpp  tcp_transport.h  transport.h  ws_transport.cpp  ws_transport.h
src/net/ws/: Client.cpp  Client.h  Server.cpp  Server.h
src/stateserver/: database_state_server.cpp  database_state_server.h  distributed_object.cpp  distributed_object.h  loading_object.cpp  loading_object.h  state_client.cpp  state_client.h  state_server.cpp  state_server.h  state_server_implementation.h
src/util/: Config.cpp  Config.h  config.cpp  config.h  globals.cpp  globals.h  logger.cpp  logger.h  metrics.cpp  metrics.h
src/web/: web_panel.cpp  web_panel.h
tests/: conftest.py  requirements-test.txt  test_clientagent.py  test_clientagent_avatar.py  test_clientagent_ws.py  test_config.py  test_database.py  test_dbstateserver.py  test_messagedirector.py  test_net.py  test_parenting_rules.py  test_sanity.py  test_stateserver.py
tests/benchmarks/: test_bench_ca.py  test_bench_md.py  test_bench_ss.py
tests/common/: ardos.py  config.py  dc.py  monitor.py  msg_coverage.py  msgtypes.py
tests/files/: test.dc
tests/tools/: monitor.py
